re-named selector .human

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ letter-spacing: 0.03em;
   line-height: 2;
   letter-spacing: 0.06em;
 }
-.human{
+.person{
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
